sandbox-codebase/objects/heymarket__Debug_Log__c/heymarket__Debug_Log__c.object-meta.xml
<CustomObject>
    <label>Debug Log</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>