sandbox-codebase/objects/heymarket__Debug_Log__c/fields/heymarket__Job__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>heymarket__Job__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>