sandbox-codebase/objects/heymarket__Debug_Log__c/fields/heymarket__Type__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Type__c</fullName>
    <defaultValue>&quot;Logs&quot;</defaultValue>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Logs</fullName>
                <default>true</default>
                <label>Logs</label>
            </value>
            <value>
                <fullName>Async</fullName>
            </value>
            <value>
                <fullName>SyncScheduler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>