sandbox-codebase/objects/heymarket__Debug_Log__c/listViews/heymarket__All.listView-meta.xml
<ListView>
    <fullName>heymarket__All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>